crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__formatter_ignore_blank_before_on.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class FormatterIgnoreBlankBeforeOn {
  // @formatter:off
  void   raw( ) { }

  // @formatter:on
  static void formatted() {
  }
}

diagnostics:
(none)
