crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__formatter_ignore_comment_before_on.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class FormatterIgnoreCommentBeforeOn {
  // @formatter:off
  void   raw( ) { }
  // owned by the next member
  // @formatter:on
  static void formatted() {
  }
}

class FormatterIgnoreCommentBeforeOnAtBoundary {
  // @formatter:off
  void   raw( ) { }
  // owned by the close brace
  // @formatter:on
}

class FormatterIgnoreRepeatedOffBeforeOn {
  // @formatter:off
  void   raw( ) { }
  // @formatter:off
  // @formatter:on
  static void formatted() {
  }
}

diagnostics:
(none)
