crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__formatter_ignore_constructor_body.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  Example() {
    // @formatter:off
    this( 1,2 );
    int raw=1+2;
    // @formatter:on
    int after = 3;
  }

  Example(int a, int b) {
  }

  Example(String name) {
    // @formatter:off
    this( name,0 );
    // trailing comment owned by the unterminated region
  }
}

diagnostics:
(none)
