crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__formatter_ignore_enum_member_boundaries.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum MemberOnly {
  A;

  // @formatter:off
  int raw=1+2;
  // @formatter:on
  int after = 3;
}

enum CrossingPartitions {
  A,
  // @formatter:off
  B;

  int raw = 1 + 2;
  // @formatter:on
  int after = 3;
}

diagnostics:
(none)
