crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__formatter_ignore_leading_blank_line.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class FormatterIgnoreLeadingBlankLine {
  int before = 1;

  // @formatter:off
  int  raw=1;
  // @formatter:on
  int after = 2;
}

diagnostics:
(none)
