crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__formatter_ignore_members.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  int before = 1;
  // @formatter:off
  int raw=1+2;
  String label="x";
  // @formatter:on
  int after = 2;
}

diagnostics:
(none)
