crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__formatter_ignore_nested_member_body.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  int before = 1;
  // @formatter:off
  int rawField=1+2;
  // @formatter:on
  int afterField = 2;

  void run() {
    if (true) {
      // @formatter:off
      int rawLocal=3+4;
      call( a,b );
      // @formatter:on
      int afterLocal = 5;
    }
  }

  class CrossingSiblingBoundary {
    void first() {
      // @formatter:off
      int raw = 1;
    }

    void second() {
    }

    // @formatter:on
    void after() {
    }
  }

  class HeaderMarker {
    /* @formatter:off */
    int stillFormatted=1+2;
    // @formatter:on
    int after = 3;
  }
}

diagnostics:
(none)
