crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__formatter_ignore_trailing_line_comment.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class FormatterIgnoreTrailingLineComment {
  // @formatter:off
  int raw   =1+2; // trailing the last ignored member
  // @formatter:on
  int after = 2;
}

diagnostics:
(none)
