crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__item_trailing_comment_spacing.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class A {
} // trailing

class B {
}

class C {
} // trailing

class D {
}

class E {
} /* block does not end the line */

class F {
}

diagnostics:
(none)
